# implicit-hie-cradle

./: ChangeLog.md  README.md  cabal.project  hie.yaml  implicit-hie-cradle.cabal
src/Hie/Implicit/: Cradle.hs
