cabal-version:      1.12
name:               implicit-hie-cradle
version:            0.4.0.2
description:        Auto generate a stack or cabal multi component cradles
category:           Development, Tools, Hie, HLS
synopsis:           Auto generate hie-bios cradles
homepage:           https://github.com/Avi-D-coder/implicit-hie-cradle#readme
bug-reports:        https://github.com/Avi-D-coder/implicit-hie-cradle/issues
author:             Avi Dessauer
maintainer:         avi.the.coder@gmail.com
copyright:          2020
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/Avi-D-coder/implicit-hie-cradle

library
  exposed-modules:  Hie.Implicit.Cradle
  other-modules:    Paths_implicit_hie_cradle
  hs-source-dirs:   src
  build-depends:
      base                  >=4.8     && <5
    , directory             >=1.3.0   && <1.4
    , extra                 >=1.6.14  && <1.8
    , filepath              >=1.4.1   && <1.5
    , hie-bios              >=0.7.0
    , implicit-hie          >=0.1.2.6 && <1
    , process               >=1.6.1   && <1.7
    , transformers          >=0.5.2   && <0.7

  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -fno-warn-unused-imports -fno-warn-unused-binds
    -fno-warn-name-shadowing -fwarn-redundant-constraints

test-suite implicit-hie-cradle-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Paths_implicit_hie_cradle
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                 >=4.7 && <5
    , implicit-hie-cradle

  default-language: Haskell2010
